refactor: migrate project from Spring Boot to Nestjs, removing Gradle configuration and related files